Edit footer and mylog

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-<div>
+<footer>
     <hr>
     <div>
     &copy; {{ site.copyright }} --- {{ site.author }} --- File Revision: {{ site.version }}.
     </div>
-</div>
+</footer>
